--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: mproveme <mproveme@student.21-school.ru    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/10/13 18:52:44 by mproveme          #+#    #+#              #
-#    Updated: 2022/10/20 14:20:34 by mproveme         ###   ########.fr        #
+#    Updated: 2022/11/04 14:48:38 by mproveme         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -19,7 +19,7 @@ OBJS	= 	$(SRCS:.cpp=.o)
 HEAD	=	ClapTrap.hpp
 			
 CC		=	c++
-CFLAGS	=	-Wall -Wextra -Werror
+CFLAGS	=	-Wall -Wextra -Werror -std=c++98
 
 RM		=	rm -rf
 
@@ -27,8 +27,8 @@ NAME	=	trap
 
 all:		$(NAME)
 
-%.o:		%.c	$(HEAD) 
-			$(CC) $(CFLAGS) -cpp $< -o $@
+%.o:		%.cpp	$(HEAD) 
+			$(CC) $(CFLAGS) -c $< -o $@
 
 $(NAME):	$(OBJS) $(HEAD) 
 			$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
