--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: mproveme <mproveme@student.21-school.ru    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/10/13 18:52:44 by mproveme          #+#    #+#              #
-#    Updated: 2022/10/20 15:28:28 by mproveme         ###   ########.fr        #
+#    Updated: 2022/11/04 14:54:56 by mproveme         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,7 +21,7 @@ HEAD	=	ClapTrap.hpp\
 			ScavTrap.hpp
 			
 CC		=	c++
-CFLAGS	=	-Wall -Wextra -Werror
+CFLAGS	=	-Wall -Wextra -Werror -std=c++98
 
 RM		=	rm -rf
 
@@ -29,8 +29,8 @@ NAME	=	trap
 
 all:		$(NAME)
 
-%.o:		%.c	$(HEAD) 
-			$(CC) $(CFLAGS) -cpp $< -o $@
+%.o:		%.cpp	$(HEAD) 
+			$(CC) $(CFLAGS) -c $< -o $@
 
 $(NAME):	$(OBJS) $(HEAD) 
 			$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
