--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: mproveme <mproveme@student.21-school.ru    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/10/13 18:52:44 by mproveme          #+#    #+#              #
-#    Updated: 2022/10/21 13:56:43 by mproveme         ###   ########.fr        #
+#    Updated: 2022/11/04 14:59:49 by mproveme         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -23,7 +23,7 @@ HEAD	=	ClapTrap.hpp\
 			FragTrap.hpp
 			
 CC		=	c++
-CFLAGS	=	-Wall -Wextra -Werror
+CFLAGS	=	-Wall -Wextra -Werror -std=c++98
 
 RM		=	rm -rf
 
@@ -31,8 +31,8 @@ NAME	=	trap
 
 all:		$(NAME)
 
-%.o:		%.c	$(HEAD) 
-			$(CC) $(CFLAGS) -cpp $< -o $@
+%.o:		%.cpp	$(HEAD) 
+			$(CC) $(CFLAGS) -c $< -o $@
 
 $(NAME):	$(OBJS) $(HEAD) 
 			$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
@@ -45,4 +45,4 @@ fclean:		clean
 
 re:			fclean all
 
-.PHONY:		all clean fclean re 
+.PHONY:		all clean fclean re
